--- a/pom.xml
+++ b/pom.xml
@@ -89,5 +89,10 @@
 		    <artifactId>commons-collections</artifactId>
 		    <version>3.2.1</version>
 		</dependency>
+	  	<dependency>
+		      <groupId>commons-fileupload</groupId>
+		      <artifactId>commons-fileupload</artifactId>
+		      <version>1.2.1</version>
+	        </dependency>
    </dependencies>
 </project>
